--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <h1>Hello world!  My name is Heather Parker</h1>
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username" minlength="5" maxlength="15" required>
+    <label for="user-pw">Password</label>
+    <input type="password" id="user-pw" name="user-pw" minlength="8" maxlength="16" required>
 </body>
 </html>
