--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="one"
+    <div class="one">
         <h1>Hello world!  My name is Heather Parker</h1>
         <label for="username">Username</label>
         <input type="text" id="username" name="username" minlength="5" maxlength="15" required>
