--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <label for="user-pw">Password</label>
         <input type="password" id="user-pw" name="user-pw" minlength="8" maxlength="16" required>
     </div>
+    <div class="grid">
+        <h2 id="a">A</h2>
+        <h2 id="b">B</h2>
+        <h2 id="c">C</h2>
+        <h2 id="d">D</h2>
+    </div>    
 </body>
 </html>
